@@ -40,9 +40,6 @@ NSApplication *theApp;
 #if LIB_FOUNDATION_LIBRARY
   	[NSProcessInfo initializeWithArguments: argv count: argc environment: env];
 #endif
-#ifndef NX_CURRENT_COMPILER_RELEASE
-  	initialize_gnustep_backend();
-#endif
 
 //[NSObject enableDoubleReleaseCheck: YES];
 	theApp = [NSApplication sharedApplication];
