@@ -64,10 +64,6 @@ main(int argc, char **argv, char** env)
   [NSProcessInfo initializeWithArguments:argv count:argc environment:env];
 #endif
 
-#ifndef NX_CURRENT_COMPILER_RELEASE
-    initialize_gnustep_backend();
-#endif
-
   theApp = [NSApplication sharedApplication];
   [theApp setDelegate:[MyObject new]];
 
