@@ -71,10 +71,6 @@ NSRect mr;
 	[NSProcessInfo initializeWithArguments:argv count:argc environment:env];
 #endif
 
-#ifndef NX_CURRENT_COMPILER_RELEASE
-	initialize_gnustep_backend();
-#endif
-
 	theApp = [NSApplication sharedApplication];
 
 //#if 1
